# internal/user/controller/controllerhttp.go
@@ -180,3 +180,71 @@ func (ctrl ControllerHTTP) GetList(c *fiber.Ctx) error {
 		},
 	})
 }
+
+// @Summary Update Phone
+// @Description Update Phone
+// @Tags user
+// @Accept json
+// @Produce json
+// @Param Authorization header string true "With the bearer started"
+// @Param body body model.UserPhoneUpdateRequest true "Payload user update phone request"
+// @Success 200 {object} pkgutil.HTTPResponse
+// @Failure 400 {object} pkgutil.HTTPResponse{data=[]pkgutil.ErrValidationResponse} "Error validation field"
+// @Failure 500 {object} pkgutil.HTTPResponse
+// @Router /v1/user/link/phone [post]
+func (ctrl ControllerHTTP) UpdatePhone(c *fiber.Ctx) error {
+	claims, ok := c.Locals(constant.JWTClaimsContextKey).(model.JWTClaims)
+	if !ok {
+		logger.Log(c.UserContext()).Error().Msg("cannot get claims from context")
+		return c.Status(fiber.StatusForbidden).JSON(fiber.Map{
+			"message": "invalid or expired token",
+		})
+	}
+
+	var req model.UserPhoneUpdateRequest
+	err := c.BodyParser(&req)
+	exception.PanicIfNeeded(err)
+
+	req.UserID = claims.UserID
+
+	err = ctrl.svc.UpdatePhone(c.UserContext(), req)
+	exception.PanicIfNeeded(err)
+
+	return c.Status(fiber.StatusOK).JSON(pkgutil.HTTPResponse{
+		Message: "Phone updated successfully",
+	})
+}
+
+// @Summary Update Email
+// @Description Update Email
+// @Tags user
+// @Accept json
+// @Produce json
+// @Param Authorization header string true "With the bearer started"
+// @Param body body model.UserEmailUpdateRequest true "Payload user update email request"
+// @Success 200 {object} pkgutil.HTTPResponse
+// @Failure 400 {object} pkgutil.HTTPResponse{data=[]pkgutil.ErrValidationResponse} "Error validation field"
+// @Failure 500 {object} pkgutil.HTTPResponse
+// @Router /v1/user/link/email [post]
+func (ctrl ControllerHTTP) UpdateEmail(c *fiber.Ctx) error {
+	claims, ok := c.Locals(constant.JWTClaimsContextKey).(model.JWTClaims)
+	if !ok {
+		logger.Log(c.UserContext()).Error().Msg("cannot get claims from context")
+		return c.Status(fiber.StatusForbidden).JSON(fiber.Map{
+			"message": "invalid or expired token",
+		})
+	}
+
+	var req model.UserEmailUpdateRequest
+	err := c.BodyParser(&req)
+	exception.PanicIfNeeded(err)
+
+	req.UserID = claims.UserID
+
+	err = ctrl.svc.UpdateEmail(c.UserContext(), req)
+	exception.PanicIfNeeded(err)
+
+	return c.Status(fiber.StatusOK).JSON(pkgutil.HTTPResponse{
+		Message: "Email updated successfully",
+	})
+}
